changing build system